TestRepo2/src/objects/POS_Magento_Configuration__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>stores all values like API key, User Name, Endpoint etc. required for Magento Integration service</description>
    <fields>
        <fullName>BRAND_CATEGORY__c</fullName>
        <label>BRAND_CATEGORY</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Overage_Amount__c</fullName>
        <label>Budget Overage Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Budget_Overage_Percent__c</fullName>
        <label>Budget Overage Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Diageo_Spirits_District__c</fullName>
        <label>Diageo Spirits District</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Spirits_Responsible__c</fullName>
        <label>Diageo Spirits Responsible</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Wine_District__c</fullName>
        <label>Diageo Wine District</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Diageo_Wine_Responsible__c</fullName>
        <label>Diageo Wine Responsible</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IDP_Url__c</fullName>
        <description>The URL to the Salesforce IDP initiated SSO</description>
        <label>IDP Url</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_URL__c</fullName>
        <label>Item URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Magento_API_Key__c</fullName>
        <label>Magento API Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magento_Catalog_Path__c</fullName>
        <label>Magento_Catalog_Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magento_Endpoint__c</fullName>
        <label>Magento Endpoint</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Magento_WS_Username__c</fullName>
        <label>Magento WS Username</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Ordering_URL__c</fullName>
        <label>Monthly Ordering URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDERWINDOW_CATEGORY__c</fullName>
        <label>ORDERWINDOW_CATEGORY</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROGRAM_CATEGORY__c</fullName>
        <label>PROGRAM_CATEGORY</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Redirect_URL__c</fullName>
        <label>Portal Redirect URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ProductImage_FolderPath__c</fullName>
        <description>Stored the server path to the media folder where Product Images on Magento are stored</description>
        <inlineHelpText>Stored the server path to the media folder where Product Images on Magento are stored</inlineHelpText>
        <label>ProductImage_FolderPath</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Quarterly_Ordering_URL__c</fullName>
        <label>Quarterly Ordering URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_apexrest_uri__c</fullName>
        <label>Salesforce apexrest uri</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE_BRAND__c</fullName>
        <label>TYPE_BRAND</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE_ORDER_WINDOW__c</fullName>
        <label>TYPE_ORDER_WINDOW</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TYPE_PROGRAM__c</fullName>
        <label>TYPE_PROGRAM</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tangerine_URL__c</fullName>
        <label>Tangerine URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thumbnail_URL__c</fullName>
        <description>The base URL for getting thumbnails from Magento</description>
        <label>Thumbnail URL</label>
        <type>Url</type>
    </fields>
    <label>POS Magento Configuration</label>
</CustomObject>